# UniversityPortfolio

./: readme.md
TDDD12-DatabaseTechnology/: mysql_instructions.md  nuke.sql
TDDD12-DatabaseTechnology/lab1/: lab1.sql
TDDD12-DatabaseTechnology/lab2/: RM.xml  lab2.sql  lab2_ER.xml
TDDD12-DatabaseTechnology/lab3/: lab3.txt
TDDD23-GameDesign/Typing/: Assembly-CSharp.csproj  Typing.sln  antsk320_gameplan.docx
TDDD23-GameDesign/TypingTrailer/: trailer.wlmp  trailerscript.txt
TDDI16-DatastructuresAndAlgorithms/avl/: .gitignore  avl_tree-test.cpp  avl_tree.cpp  avl_tree.h
TDDI16-DatastructuresAndAlgorithms/passwords/: .gitignore  decrypt.cpp  key.h  massif.out.123233  rand8  readme.txt
TDDI16-DatastructuresAndAlgorithms/patterns/: .gitignore  fast.cpp  readme.txt
TDDI16-DatastructuresAndAlgorithms/wordchains/: .gitignore  wordchain.cpp  wordchain_kattis.cpp
TDIU16-Pintos/: 20questions.txt  FailedTests.txt  readme.txt  uppg17_resonemang.txt
TDP002-Python/: .dojo3.txt.un~  dojo3.txt  dojo3.txt~  quicksort.py  seminar2.txt
TDP002-Python/Labb3/: cardsReworkFinal.py
TDP002-Python/Labb4/: 1.0sokoban.py  1.1sokoban.py  1.2sokoban.py  1.3sokoban.py  1.4sokoban.py  1.5sokoban.py  1.6sokoban.py  1.7sokoban.py  (+2 more)
TDP005-SFMLGame-C++/TDP005-SFML-Spel/: CMakeLists.txt  bullet.h  enemy.cc  gui.cc  gui.h  mixin.h  player.cc  readme.md  spawner.cc  tools.h  wall.h  world.cc
TDP017/: .gitignore  README.md  start_w_o_docker.sh
TDP019/: Automato.rar  sprakdagbok.txt
TDP029-Zoezi/: .gitignore  README.md  known issues.txt  start.py
TDP031-Sysadmin/: README.md
(+1059 files in other folders)
